--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width">
     <title>JS 22</title>
     <style type="text/css">
+      .hepsi{
+        margin: 20px 0 0 0;
+      }
       #discerceve{
         width: 400px;
         border: 4px solid #59f;
@@ -32,7 +35,7 @@
     </script>
   </head>
   <body>
-    
+    <div class="hepsi">
     <from action="" method="get">
       <input type="button" value="İstiklal Marşını Göster" onclick="goster()" />
       <input type="button" value="İstiklal Marşını Gizle" onclick="gizle()" />
@@ -41,5 +44,6 @@
     <div id="discerceve">
       <div id="iccerceve"></div>
     </div>
+   </div>
   </body>
 </html>
