--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>JS 22</title>
     <style type="text/css">
       .hepsi{
-        margin: 20px 0 0 0;
+        margin: 20px auto 0 auto;
       }
       #discerceve{
         width: 400px;
