--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>JS 22</title>
+    <title>İSTİKLÂL MARŞI</title>
     <style type="text/css">
       .hepsi{
-        margin: 20px auto 0 auto;
+        margin: 20px auto;
       }
       #discerceve{
         width: 400px;
