--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>İSTİKLÂL MARŞI</title>
     <style type="text/css">
       .hepsi{
-        margin: 20px auto;
+        margin: 0 auto;
       }
       #discerceve{
         width: 400px;
