--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>İSTİKLÂL MARŞI</title>
     <style type="text/css">
-      .hepsi{
+      #hepsi{
         margin: 0 auto;
       }
       #discerceve{
@@ -35,7 +35,7 @@
     </script>
   </head>
   <body>
-    <div class="hepsi">
+    <div id="hepsi">
     <from action="" method="get">
       <input type="button" value="İstiklal Marşını Göster" onclick="goster()" />
       <input type="button" value="İstiklal Marşını Gizle" onclick="gizle()" />
