--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>İSTİKLÂL MARŞI</title>
     <style type="text/css">
       #hepsi{
+        width: 1000px;
+        height: auto;
         margin: 0 auto;
       }
       #discerceve{
