--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>İSTİKLÂL MARŞI</title>
     <style type="text/css">
       #hepsi{
-        width: 200px;
+        width: auto;
         height: auto;
         margin: 0 auto;
       }
