--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="shortcut icon" href="Icon-Turkey.ico" />
     <meta name="viewport" content="width=device-width">
     <title>İSTİKLÂL MARŞI</title>
     <style type="text/css">
